src/test/deca/syntax/valid/assign_minus.deca
// Description :
// Unaire '-'
//
// Resultats :
// ok
//

{
    x= -5;
}