src/test/deca/syntax/invalid/double_float.deca
// Description :
// double decalration

// Resultats :
// Erreur contextuelle


{
    float float x;
}